--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1 class="project-name">Mediajs</h1>
       <h2 class="project-tagline">对Html5媒体捕捉的功能做了一个包装</h2>
       <a href="https://github.com/kangjy/mediajs" class="btn">View on GitHub</a>
+      <a href="#demo" class="btn">Demo</a>
       <a href="https://github.com/kangjy/mediajs/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/kangjy/mediajs/tarball/master" class="btn">Download .tar.gz</a>
     </section>
