--- a/index.html
+++ b/index.html
@@ -59,6 +59,39 @@ media.<span class="pl-c1">uploadimage</span>(arrayfiles,url,fn)</pre></div>
       </footer>
 
     </section>
+    <style type="text/css">
+    .mybtn{
+      background-color: #337ab7;
+      display: inline-block;
+      height: 50px;
+      width: 130px;
+      line-height: 50px;
+      margin: auto;
+      font-size: 18px;
+      text-align: center;
+      color: #fff;
+      position: relative;
+      text-decoration:none;
+    }
+  </style>
+    <div>
+    <a class="mybtn" href="#none">
+      上传照片
+      <input name="idcard" type="file" id="idcard" style="font-size: 118px;cursor: pointer;width: 100%;height:100%;pointer;position: absolute;left: 0;top: 0; z-index:999;filter:alpha(opacity=0);opacity:0;"/>
+    </a>
+    
+  </div>
+  <img id="showimg" style="width:300px;height:400px">
+    <script type="text/javascript" src="http://www.yxzzd.cn/release/js/media.js"></script>
+    <script type="text/javascript">
+      media.init({
+    id:"idcard",
+    imageid:"showimg",
+    onchange:function(){
+      console.log(this)
+    }
+  });
+    </script>
 
   
   </body>
