--- a/demo/testinit.html
+++ b/demo/testinit.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta charset="utf-8" /> 
 	<title>Document</title>
-	<script type="text/javascript" src="../media.js"></script>
+	<script type="text/javascript" src="../media.min.js"></script>
 	<style type="text/css">
 		.btn{
 			background-color: #337ab7;
