--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <section class="page-header">
       <h1 class="project-name">Mediajs</h1>
       <h2 class="project-tagline">对Html5媒体捕捉的功能做了一个包装</h2>
-      <a href="https://github.com/kangjy/mediajs" class="btn">View on GitHub</a>
       <a href="#demo" class="btn">Demo</a>
+      <a href="https://github.com/kangjy/mediajs" class="btn">View on GitHub</a>      
       <a href="https://github.com/kangjy/mediajs/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/kangjy/mediajs/tarball/master" class="btn">Download .tar.gz</a>
     </section>
@@ -67,7 +67,7 @@ media.<span class="pl-c1">init</span>({
 <span class="pl-c">*/</span>
 media.<span class="pl-c1">uploadimage</span>(arrayfiles,url,fn)</pre></div>
 <h2>
-<a id="Demo" class="anchor" href="#%E5%BF%AB%E9%80%9F%E4%BD%BF%E7%94%A8" aria-hidden="true"><span class="octicon octicon-link"></span></a>demo</h2>
+<a id="Demo" name="demo" class="anchor" href="#%E5%BF%AB%E9%80%9F%E4%BD%BF%E7%94%A8" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo</h2>
 示例代码
 <div class="highlight highlight-js">
   <pre>
