--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <div class="highlight highlight-js"><pre><span class="pl-c">//将已有的input标签初始化为一个可捕获图片的input。</span>
 media.<span class="pl-c1">init</span>({
-    targetid<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>idcard<span class="pl-pds">"</span></span>,<span class="pl-c">//触发浏览器读取图片的input标签id </span>
+    id<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>idcard<span class="pl-pds">"</span></span>,<span class="pl-c">//触发浏览器读取图片的input标签id </span>
     imageid<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>imgshowid<span class="pl-pds">"</span></span>, <span class="pl-c">//将浏览器选择的图片展示到页面上的img标签上,默认为null，即不展示选择的图片</span>
     canvasid<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">"</span>canvasid<span class="pl-pds">"</span></span>, <span class="pl-c">// 将选择的图片展示到页面的canvas标签上，默认为null，不展示图片。</span>
     onNotSupported：<span class="pl-en">fn</span>(<span class="pl-smi">msg</span>){
