--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <meta property="og:title" content="KangjyTitle" />
+  <meta property="og:description" content="Kangjy Description" />
+  <meta property="og:url" content="http://kangjy.github.io/mediajs/" />
+  <meta property="og:image" content="https://img.alicdn.com/tfs/TB1mUgfRXXXXXakXVXXXXXXXXXX-2880-1000.png" />
     <style type="text/css">
       .mybtn{
         background-color: #337ab7;
