--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <title>Mediajs by kangjy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="twitter:title" content="TwitterKangjy">
+    <meta property="twitter:description" content="TwitterKangjy descript">
+    <meta property="twitter:image:src" content="http://kangjy.github.io/mediajs/">
+    <meta property="twitter:image:width" content="1291">
+    <meta property="twitter:image:height" content="315">
+    <meta property="og:title" content="KangjyTitle" />
+    <meta property="og:description" content="Kangjy Description" />
+    <meta property="og:url" content="http://kangjy.github.io/mediajs/" />
+    <meta property="og:image" content="https://img.alicdn.com/tfs/TB1mUgfRXXXXXakXVXXXXXXXXXX-2880-1000.png" />
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <meta property="og:title" content="KangjyTitle" />
-  <meta property="og:description" content="Kangjy Description" />
-  <meta property="og:url" content="http://kangjy.github.io/mediajs/" />
-  <meta property="og:image" content="https://img.alicdn.com/tfs/TB1mUgfRXXXXXakXVXXXXXXXXXX-2880-1000.png" />
+   
     <style type="text/css">
       .mybtn{
         background-color: #337ab7;
