--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Mediajs by kangjy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="twitter:creator" content="TwitterKangjy">
+    <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="TwitterKangjy">
     <meta property="twitter:description" content="TwitterKangjy descript">
     <meta property="twitter:image:src" content="http://kangjy.github.io/mediajs/">
