--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="TwitterKangjy">
     <meta property="twitter:description" content="TwitterKangjy descript">
-    <meta property="twitter:image:src" content="https://ellisonleao.github.io/sharer.js/img/socialbg.png">
+    <meta property="twitter:image:src" content="https://img.alicdn.com/tfs/TB1mUgfRXXXXXakXVXXXXXXXXXX-2880-1000.png">
     <meta property="twitter:image:width" content="1291">
     <meta property="twitter:image:height" content="315">
     <meta property="og:title" content="KangjyTitle" />
