--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:description" content="Kangjy Description" />
     <meta property="og:url" content="http://kangjy.github.io/mediajs/" />
     <meta property="og:image" content="https://img.alicdn.com/tfs/TB1mUgfRXXXXXakXVXXXXXXXXXX-2880-1000.png"/>
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1291">
     <meta property="og:image:height" content="315">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
