--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>Mediajs by kangjy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:url" content="https://ellisonleao.github.io/sharer.js/">
+    <meta property="og:site_name" content="Share.js">
+    <meta property="og:image" content="https://ellisonleao.github.io/sharer.js/img/socialbg.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1291">
+    <meta property="og:image:height" content="315">
     <meta property="twitter:creator" content="TwitterKangjy">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="TwitterKangjy">
@@ -11,13 +17,7 @@
     <meta property="twitter:image:src" content="https://img.alicdn.com/tfs/TB1mUgfRXXXXXakXVXXXXXXXXXX-2880-1000.png">
     <meta property="twitter:image:width" content="1291">
     <meta property="twitter:image:height" content="315">
-    <meta property="og:title" content="KangjyTitle" />
-    <meta property="og:description" content="Kangjy Description" />
-    <meta property="og:url" content="http://kangjy.github.io/mediajs/" />
-    <meta property="og:image" content="https://img.alicdn.com/tfs/TB1mUgfRXXXXXakXVXXXXXXXXXX-2880-1000.png"/>
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1291">
-    <meta property="og:image:height" content="315">
+    
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
